# r2t2

./: .gitignore  README.md  example1.py  example2.py  height.py  height_map_path_tracer.py  max_mip_map.py  pyproject.toml  requirements.txt  simple_relief_mapper.py  simpler.py  test.py  test_grok.py  test_mipmap1.py  test_mipmap2.py
.github/workflows/: build.yml
examples/: example1.py  example2.py  example3.py  example4.py  example5.py  example_mammm.py  example_mammm_2.py  example_mammm_3.py  example_maximum_altitude.py  example_soft_shadow.py  height.py
r2t2/: __init__.py  build_test.py  maximum_altitude.py  maximum_altitude_mmm.py  maximum_altitude_mmm_np.py  minimal_renderer.py  r2t2.py  renderer.py  taichi_renderer.py
r2t2/m4/: algo_functions_parallel.py  algorithm.py  line.py  m4.py
r2t2/minimum_altitude/: collision_functions.py  fast_mipmap.py  illuminate.py  quad_altitude.py  rendering_pipeline.py  sample_altitude.py
r2t2/optimally_fast_soft_shadows/: soft_shadow.py
simple_relief_mapper/: __init__.py  simple_relief_mapper.py
tests/: test_maxmipmap.py  test_mipmap1.py
