[project]
name = "r2t2"
description = "A simple, fast, top-down Ray Tracing Terrain Renderer (R2T2)"
version = "0.6.1"
dependencies = [
    "taichi==1.7.3",
    "numpy==2.2.3",
]

[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=40.8.0",
    "wheel",
]

[project.optional-dependencies]
examples = [
    "tqdm",
    "noise",
    "opencv-python",
]
