[project]
name = "r2t2"
description = "A simple, fast, top-down Ray Tracing Terrain Renderer (R2T2)"
version = "1.1.0-experimental"
dependencies = [
    "taichi==1.7.3",
    "numpy>=1.26.4",
]

[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=40.8.0",
    "wheel",
]

[project.optional-dependencies]
examples = [
    "tqdm",
    "noise",
    "opencv-python",
    "matplotlib",
]
tests = [
    "pytest",
]
